(fix) fixing spacing in projects blurb

--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -531,6 +531,7 @@ body {
 
 .project_blurb {
   font-style: italic;
+  margin-top: 0;
 }
 
 @media screen and (max-width: 1000px) {
